--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </div>
                 </article>
 
-                <div class="grid grid-rows-2 gap-8">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1 gap-8 md:col-span-2 lg:col-span-1">
 
                     <article class="relative">
                         <img src="src/assets/flooring_img.jpg" alt="Outdoor Flooring"
